[project]
name = "your_cool_project"
version = "1.1.1"
description = "Example repository demonstrating a modern Python project setup"
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Your Name Here", email = "your@name.com" }
]

dependencies = [
    "coloredlogs~=15.0",
    "pre-commit~=4.3",
    "pytest~=8.4",
    "ruff~=0.13"
]

# Below are settings for different tools we use for testing and linting

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
]
