[project]
name = "mite_web_extras"
version = "0.1.0"
description = "Contains auxiliary files for mite_web"
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]

dependencies = [
    "coloredlogs~=15.0",
    "pre-commit~=4.3",
    "pytest~=8.4",
    "ruff~=0.13"
]

# Below are settings for different tools we use for testing and linting

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
]
