[project]
name = "mite_web_extras"
version = "0.3.0"
description = "Contains auxiliary files for mite_web"
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]

dependencies = [
    "AlphaFetcher~=0.2",
    "coloredlogs~=15.0",
    "mite_extras",
    "pre-commit~=4.3",
    "psycopg2-binary",
    "pytest~=8.4",
    "pydantic~=2.2",
    "requests~=2.32",
    "ruff~=0.13",
]

# Below are settings for different tools we use for testing and linting


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    "SIM118",
    "C416",
    "SIM102"
]
